@@ -1,15 +1,0 @@
-DEFINED_PHASES=compile configure install postinst prerm setup test unpack
-DEPEND=amd64? ( abi_x86_32? ( !abi_x86_64? ( www-plugins/nspluginwrapper ) ) ) selinux? ( sec-policy/selinux-flash ) app-arch/unzip
-DESCRIPTION=Adobe Flash Player
-EAPI=5
-HOMEPAGE=http://www.adobe.com/products/flashplayer.html
-IUSE=debug kde selinux sse2 abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32
-KEYWORDS=-* amd64 x86
-LICENSE=AdobeFlash-11.x
-RDEPEND=amd64? ( abi_x86_32? ( !abi_x86_64? ( www-plugins/nspluginwrapper ) ) ) selinux? ( sec-policy/selinux-flash ) abi_x86_64? ( dev-libs/atk dev-libs/glib:2 dev-libs/nspr dev-libs/nss kde? ( dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtsvg:4 kde-base/kdelibs x11-libs/libICE x11-libs/libSM x11-libs/libXau x11-libs/libXdmcp x11-libs/libXext x11-libs/libXft x11-libs/libXpm ) media-libs/fontconfig media-libs/freetype >=sys-libs/glibc-2.4 x11-libs/cairo x11-libs/gdk-pixbuf x11-libs/gtk+:2 x11-libs/libX11 x11-libs/libXcursor x11-libs/libXext x11-libs/libXrender x11-libs/libXt x11-libs/pango ) abi_x86_32? ( amd64? ( || ( ( dev-libs/atk[abi_x86_32(-)] x11-libs/cairo[abi_x86_32(-)] x11-libs/gdk-pixbuf[abi_x86_32(-)] x11-libs/gtk+:2[abi_x86_32(-)] x11-libs/pango[abi_x86_32(-)] ) app-emulation/emul-linux-x86-gtklibs ) || ( ( dev-libs/glib:2[abi_x86_32(-)] dev-libs/nspr[abi_x86_32(-)] dev-libs/nss[abi_x86_32(-)] ) app-emulation/emul-linux-x86-baselibs ) || ( ( media-libs/fontconfig[abi_x86_32(-)] media-libs/freetype[abi_x86_32(-)] x11-libs/libX11[abi_x86_32(-)] x11-libs/libXcursor[abi_x86_32(-)] x11-libs/libXext[abi_x86_32(-)] x11-libs/libXrender[abi_x86_32(-)] x11-libs/libXt[abi_x86_32(-)] ) app-emulation/emul-linux-x86-xlibs ) ) x86? ( dev-libs/atk dev-libs/glib:2 dev-libs/nspr dev-libs/nss kde? ( dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtsvg:4 kde-base/kdelibs x11-libs/libICE x11-libs/libSM x11-libs/libXau x11-libs/libXdmcp x11-libs/libXext x11-libs/libXft x11-libs/libXpm ) media-libs/fontconfig media-libs/freetype >=sys-libs/glibc-2.4 x11-libs/cairo x11-libs/gdk-pixbuf x11-libs/gtk+:2 x11-libs/libX11 x11-libs/libXcursor x11-libs/libXext x11-libs/libXrender x11-libs/libXt x11-libs/pango ) ) || ( media-fonts/liberation-fonts media-fonts/corefonts )
-REQUIRED_USE=sse2 debug? ( abi_x86_32 ) || ( abi_x86_64 abi_x86_32 )
-RESTRICT=strip mirror
-SLOT=0
-SRC_URI=abi_x86_32? ( !debug? ( http://fpdownload.macromedia.com/get/flashplayer/pdc/11.2.202.359/install_flash_player_11_linux.i386.tar.gz -> adobe-flash-11.2.202.359.i386.tar.gz ) debug? ( http://fpdownload.macromedia.com/pub/flashplayer/updaters/11/flashplayer_11_plugin_debug.i386.tar.gz -> adobe-flash-11.2.202.359-debug.i386.tar.gz ) ) abi_x86_64? ( http://fpdownload.macromedia.com/get/flashplayer/pdc/11.2.202.359/install_flash_player_11_linux.x86_64.tar.gz -> adobe-flash-11.2.202.359.x86_64.tar.gz )
-_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	mozextension	ba6829881080a663d68531424a3dfbc6	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	fac675dcccf94392371a6abee62d909f	multilib-build	02e68fc95064bb486c12ad2de16b8c82	multilib-minimal	5bbdc77877c1aa3c6bd89ca3f9196d11	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	nsplugins	7ea51b2f6cbd5b36b9c0163cc3ee03a2	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=268a648157088981dc928950e62bc7e8
