@@ -1,6 +1,9 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.253 2014/06/10 21:19:19 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.254 2014/06/10 22:14:04 jer Exp $
+
+  10 Jun 2014; Jeroen Roovers <jer@gentoo.org> -adobe-flash-11.2.202.359.ebuild:
+  Old.
 
   10 Jun 2014; Mikle Kolyada <zlogene@gentoo.org>
   adobe-flash-11.2.202.378.ebuild:
